samples/_failures_safe/1761295868_fc5aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99b1f9b2.c: In function ‘main’:
./samples/SAFE/__tmp_99b1f9b2.c:171:11: error: expected ‘;’ at end of input
  171 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_99b1f9b2.c:171:5: error: expected declaration or statement at end of input
  171 |     printf
      |     ^~~~~~
